--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,82 @@
+aiohttp==3.6.2
+astroid==2.3.3
+async-timeout==3.0.1
+attrs==19.3.0
+backcall==0.1.0
+bleach==3.1.0
+certifi==2019.11.28
+chardet==3.0.4
+colorama==0.4.1
+contextvars==2.4
+cycler==0.10.0
+decorator==4.4.1
+defusedxml==0.6.0
+entrypoints==0.3
+idna==2.9
+immutables==0.11
+ipykernel==5.1.3
+ipython==7.10.2
+ipython-genutils==0.2.0
+ipywidgets==7.5.1
+isort==4.3.21
+jedi==0.15.1
+Jinja2==2.10.3
+jsonschema==3.2.0
+jupyter==1.0.0
+jupyter-client==5.3.4
+jupyter-console==6.0.0
+jupyter-core==4.6.1
+kiwisolver==1.1.0
+lazy-object-proxy==1.4.3
+loguru==0.4.1
+MarkupSafe==1.1.1
+matplotlib==3.1.2
+mccabe==0.6.1
+mistune==0.8.4
+mpmath==1.1.0
+multidict==4.7.5
+mypy==0.761
+mypy-extensions==0.4.3
+nbconvert==5.6.1
+nbformat==4.4.0
+notebook==6.0.2
+numpy==1.17.4
+pandas==0.25.3
+pandocfilters==1.4.2
+parso==0.5.1
+pickleshare==0.7.5
+prometheus-client==0.7.1
+prompt-toolkit==3.0.2
+pydantic==1.4
+Pygments==2.5.2
+pylint==2.4.4
+PyMySQL==0.9.3
+pyparsing==2.4.5
 pypyodbc==1.3.4
+pyrsistent==0.15.6
+python-dateutil==2.8.1
+pytz==2019.3
+pywin32==227
+pywinpty==0.5.7
+pyzmq==18.1.1
+qtconsole==4.6.0
 requests==2.23.0
+Send2Trash==1.5.0
+six==1.13.0
+terminado==0.8.3
+testpath==0.4.4
+tornado==6.0.3
+traitlets==4.3.3
+typed-ast==1.4.1
+typing-extensions==3.7.4.1
+urllib3==1.25.8
+vbml==0.5.92
 vk-api==11.7.0
-
+vkbottle==2.4
+watchgod==0.5
+wcwidth==0.1.7
+webencodings==0.5.1
+widgetsnbextension==3.5.1
+win32-setctime==1.0.1
+wrapt==1.11.2
+yarl==1.4.2
